--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1581,7 +1581,7 @@ ul.nav.nav-tabs {
      margin-right: 20px;
 }
 .rank_percentage h3 {
-  color: #b8e986;
+  /*color: #b8e986;*/
   font-family: "Roboto-Condensed0";
   font-size: 32px;
   margin-top: 29px;
