--- a/app/index.ejs
+++ b/app/index.ejs
@@ -12,6 +12,8 @@
   <link rel="stylesheet" href="/static/css/ionicons.min.css">
   <link rel="stylesheet" href="/static/css/styles.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
   <!-- <link href='/static/style.css' rel="stylesheet"> -->
   <!-- favicon -->
@@ -40,6 +42,7 @@
     <%- reactOutput %>
   </div>
 
+  
   <script src="static/app.js"></script>
   <script src="/static/js/jquery.min.js"></script>
   <script src="/static/js/bootstrap.min.js"></script>
