--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -3116,7 +3116,7 @@ body{overflow: scroll;}
 }
 
 /*animation*/
-.fixedTable-sidebar tr td{
+.fliptr td{
      animation-name: dropHeader;
       animation-iteration-count: 1;
       animation-timing-function: ease-out;
@@ -3139,30 +3139,8 @@ body{overflow: scroll;}
         transform: rotateX(0deg);
       }
     }
-.fixedTable-row tr td{
-     animation-name: dropHeader;
-      animation-iteration-count: 1;
-      animation-timing-function: ease-out;
-      animation-duration: 0.7s;
 
-   }
-   @keyframes dropHeader {
-      0% {
-        transform: rotateX(90deg);
-      }
-      100% {
-        transform: rotateX(0deg);
-      }
-    }
-     @-webkit-keyframes dropHeader {
-       0% {
-        transform: rotateX(90deg);
-      }
-      100% {
-        transform: rotateX(0deg);
-      }
-    }
-.fixedTable-sidebar tr td {
+.fliptr td {
     -webkit-transition-duration: 1s;
     -moz-transition-duration: 1s;
     -o-transition-duration: 1s;
@@ -3172,16 +3150,7 @@ body{overflow: scroll;}
     -o-transition-property: -o-transform;
     transition-property: transform;
 }
-.fixedTable-row tr td {
-    -webkit-transition-duration: 1s;
-    -moz-transition-duration: 1s;
-    -o-transition-duration: 1s;
-    transition-duration: 1s;
-    -webkit-transition-property: -webkit-transform;
-    -moz-transition-property: -moz-transform;
-    -o-transition-property: -o-transform;
-    transition-property: transform;
-}
+
 
 /*.rank_head_list ul {
     -webkit-transition: all 200ms ease-in;
@@ -3237,4 +3206,14 @@ body{overflow: scroll;}
   z-index: 1; 
 }
 
-
+ h2.zoom_class {
+  -webkit-transition: all 500ms ease-in;
+  -webkit-transform: scale(1.5);
+  -ms-transition: all 500ms ease-in;
+  -ms-transform: scale(1.5);   
+  -moz-transition: all 500ms ease-in;
+  -moz-transform: scale(1.5);
+  transition: all 500ms ease-in;
+  transform: scale(1.3); 
+  z-index: 1; 
+}
