--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1973,7 +1973,7 @@ header .header-content .social_icon p {
 }
 .rank_head_list ul li p {
  font-family: Roboto-Condensed0;
-    font-size: 11.1px;
+    font-size: 12.1px;
     font-weight: normal;
     line-height: 15px;
     margin-bottom: 12px;
@@ -2046,7 +2046,19 @@ header .header-content .social_icon p {
 }
 
 .fixedTable-sidebar {
-    height: calc(100vh - 89px);
+    height: calc(100vh - 89px) !important;
+}
+
+.fixedTable-header::after {
+    background: #f9f7f5;
+    width: 23px;
+    content: "0";
+    position: absolute;
+    height: 100%;
+    display: block;
+    top: 0;
+    z-index: 999;
+    right: -21px;
 }
 
 /*----------------------------------------------------*/
@@ -2951,8 +2963,8 @@ body{overflow: scroll;}
     margin-left: 27%;
     padding-left: 2px;
     width: 72%;
-/*    overflow: hidden;
-*/   z-index: 99 !important;
+    overflow: inherit;
+    z-index: 99 !important;
 }
 .fixedTable-sidebar {
    float: left;
@@ -3030,7 +3042,7 @@ body{overflow: scroll;}
     width: 62%;
 }
 .fixedTable-header{margin-left: 38%;
-    width: 62%;}
+    width: 61%;}
 }
 
 @media(min-width: 1200px) and (max-width: 1299px){
@@ -3239,24 +3251,24 @@ body{overflow: scroll;}
 
 .rank_head_list ul.zoom_class {
   -webkit-transition: all 500ms ease-in;
-  -webkit-transform: scale(1.2);
+  -webkit-transform: scale(1.3);
   -ms-transition: all 500ms ease-in;
-  -ms-transform: scale(1.2);   
+  -ms-transform: scale(1.3);   
   -moz-transition: all 500ms ease-in;
-  -moz-transform: scale(1.2);
+  -moz-transform: scale(1.3);
   transition: all 500ms ease-in;
-  transform: scale(1.1); 
+  transform: scale(1.2); 
   z-index: 1; 
 }
 
  h2.zoom_class {
   -webkit-transition: all 500ms ease-in;
-  -webkit-transform: scale(1.2);
+  -webkit-transform: scale(1.3);
   -ms-transition: all 500ms ease-in;
-  -ms-transform: scale(1.2);   
+  -ms-transform: scale(1.3);   
   -moz-transition: all 500ms ease-in;
-  -moz-transform: scale(1.2);
+  -moz-transform: scale(1.3);
   transition: all 500ms ease-in;
-  transform: scale(1.1); 
+  transform: scale(1.2); 
   z-index: 1; 
 }
