Update Excellence MObile View

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -2564,7 +2564,7 @@ img.nav-pic{ height: 40px; width: 40px; }
     width: 95%;
 }
 .container-fluid.tab {
-    padding: 0 0 2px 5px;
+    padding: 0;
 }
 .heading_text{display: inline-block;}
 .year {
@@ -2932,7 +2932,6 @@ ul.nav.nav-tabs{ border: none; }
     color: #9f9f9f;
     float: left;
     font-size: 12px;
-    height: 22px;
     margin: 0;
     overflow: hidden;
     width: 70%;
@@ -3235,7 +3234,7 @@ ul.nav.nav-tabs{ border: none; }
 @media (max-width: 480px){
 
 .spc_bx {
-    margin-top: 70px;
+    margin-top: 53px;
 }
 .fixedTable-sidebar {
     display: table;
