--- a/app/index.ejs
+++ b/app/index.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>SUS Metrics Performance Dashboard</title>
+  <title>SUS Metrics Leaderboard</title>
   <!-- Semantic META -->
   <meta name="keywords" content="Reactjs, Nodejs, mongoDB, express, mern, mean">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
